<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Lexica</string>
    <string name="new_game">New Game</string>
    <string name="restore_game">Restore Game</string>
    <string name="prefs">Preferences</string>
    <string name="pref_dict">Lexicon</string>
    <string name="pref_dict_ca" tools:keep="@string/pref_dict_ca">Catalan</string>
    <string name="pref_dict_de_DE" tools:keep="@string/pref_dict_de_DE">German (Extended)</string>
    <string name="pref_dict_de_DE_description" tools:keep="@string/pref_dict_de_DE_description">Includes diacritics: äöü</string>
    <string name="pref_dict_de_DE_no_diacritics" tools:keep="@string/pref_dict_de_DE_no_diacritics">German</string>
    <string name="pref_dict_es" tools:keep="@string/pref_dict_es">Spanish</string>
    <string name="pref_dict_fa" tools:keep="@string/pref_dict_fa">Persian</string>
    <string name="pref_dict_fr_FR" tools:keep="@string/pref_dict_fr_FR">French (Extended)</string>
    <string name="pref_dict_fr_FR_description" tools:keep="@string/pref_dict_fr_FR_description">Includes diacritics: àâçéèêëîïôöûü</string>
    <string name="pref_dict_fr_FR_no_diacritics" tools:keep="@string/pref_dict_fr_FR_no_diacritics">French</string>
    <string name="pref_dict_hu" tools:keep="@string/pref_dict_hu">Hungarian</string>
    <string name="pref_dict_id" tools:keep="@string/pref_dict_id">Indonesian</string>
    <string name="pref_dict_it" tools:keep="@string/pref_dict_it">Italian</string>
    <string name="pref_dict_ja" tools:keep="@string/pref_dict_ja">Japanese</string>
    <string name="pref_dict_nl" tools:keep="@string/pref_dict_nl">Dutch</string>
    <string name="pref_dict_pl" tools:keep="@string/pref_dict_pl">Polish</string>
    <string name="pref_dict_pt_BR" tools:keep="@string/pref_dict_pt_BR">Portuguese (Brazil)</string>
    <string name="pref_dict_ru" tools:keep="@string/pref_dict_ru">Russian</string>
    <string name="pref_dict_ru_extended" tools:keep="@string/pref_dict_ru_extended">Russian (Extended)</string>
    <string name="pref_dict_ru_extended_description" tools:keep="@string/pref_dict_ru_extended_description">Includes grammar cases and abbreviations</string>
    <string name="pref_dict_en_GB" tools:keep="@string/pref_dict_en_GB">English (UK)</string>
    <string name="pref_dict_uk" tools:keep="@string/pref_dict_uk">Ukrainian</string>
    <string name="pref_dict_en_US" tools:keep="@string/pref_dict_en_US">English (US)</string>
    <string name="lexicon_is_in_beta">Beta</string>
    <string name="pref_boardSize">Board Size</string>
    <string name="pref_timeLimit">Time Limit</string>
    <string name="pref_scoreType">Scoring Type</string>
    <string name="word_length">Word Length</string>
    <string name="letter_points">Letter Points</string>
    <string name="pref_hintMode">Hint</string>
    <string name="pref_hintMode_summary">Shows the number of words each letter can be used in</string>
    <string name="tile_count">Number of words</string>
    <string name="hint_colour">Tile colour</string>
    <string name="pref_sounds">Sounds Enabled</string>
    <string name="pref_sounds_summary">Whether or not sound effects are enabled</string>
    <string name="dialog_about_title">About Lexica</string>
    <string name="dialog_about_content">
	Touch the screen and move your finger to adjacent squares to spell words.
	You have three minutes to find as many words as possible.

	\n\nScoring:
	\nOn 4x4 boards, words must be at least three letters long.  On 5x5 boards,
	words must be at least four letters long.
	Words that have three or four letters are worth one point.  Longer words
	are worth more points.  Proper nouns are not counted.\n\n
	</string>
    <string name="menu_rotate_board">Rotate Board</string>
    <string name="menu_save_game">Save Game</string>
    <string name="menu_end_game">End Game</string>
    <string name="button_ok">OK</string>
    <string name="button_delete">Delete</string>
    <string name="button_cancel">Cancel</string>
    <string name="about">About</string>
    <string name="show_missed">Show Missed Words</string>
    <string name="hide_missed">Hide Missed Words</string>
    <string name="show_unique">Show Unique Words</string>
    <string name="hide_unique">Hide Unique Words</string>
    <string name="view_word"><u>View</u></string>
    <string name="define_word"><u>Define</u> </string>
    <string name="words">Words</string>
    <string name="score">Score</string>
    <string name="time">Time</string>
    <string name="found_words">Found Words</string>
    <string name="missed_words">Missed Words</string>
    <string name="total_words">Total Words:</string>
    <string name="total_score">Total Score:</string>
    <string name="value_max_percentage">%1$d/%2$d (%3$d%%)</string>
    <string name="high_score">High Score</string>
    <string name="high_scores">High Scores</string>
    <string name="pref_resetScores_summary">High scores are tracked for each combination of the above settings. Tap to reset all scores to zero.</string>
    <string name="pref_resetScores">Reset High Scores</string>
    <string name="high_scores_reset">High scores have been reset.</string>
    <string name="reset_scores_prompt">Are you sure you want to reset all high scores for all game modes to zero?</string>
    <string name="pref_breakdown">Show Word Length Breakdown</string>
    <string name="pref_breakdown_summary">Whether or not the word count shows counts by word length</string>
    <string name="pref_definitionProvider">Definition Provider</string>
    <string name="pref_definitionProvider_summary">Select a definition provider to use. If the selected provider is not installed, an online source such as Wiktionary will be used.</string>
    <string name="pref_definitionProvider_dialog">Select Definition Provider</string>
    <string name="pref_definitionProvider_dictionaryProvider_online">Online</string>
    <string name="pref_theme">Theme</string>
    <string name="pref_theme_dialog">Select Theme</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_high_contrast">High Contrast</string>
    <string name="sort">Sort</string>
    <string name="delete_custom_game_mode">Delete custom game mode \"%1$s\"? Any high scores will be lost.</string>
    <string name="input_game_mode_name_hint">Name</string>
    <string name="input_game_mode_name_description">For choosing game mode / recording high scores</string>
    <string name="input_game_mode_minutes_description">Time limit in minutes</string>
    <string name="menu_new_game_mode">New</string>
    <string name="menu_save_game_mode">Save</string>
    <string name="game_mode_sprint">Sprint</string>
    <string name="game_mode_sprint_description">Short game to find as many words as possible</string>
    <string name="game_mode_marathon">Marathon</string>
    <string name="game_mode_marathon_description">Try to find all words, without any time pressure</string>
    <string name="game_mode_beginner">Beginner</string>
    <string name="game_mode_beginner_description">Use hints to help find words</string>
    <string name="game_mode_letter_points">Letter Points</string>
    <string name="game_mode_letter_points_description">Score more points for using less common letters</string>
    <string name="game_mode_custom_description">Custom game mode</string>
    <string name="game_mode_legacy">Legacy</string>
    <string name="game_mode_legacy_description">Used in an earlier version of Lexica</string>
    <string name="error_restoring_game">Could not restore your game</string>
    <string name="whats_new_title">What\'s New</string>
    <string name="whats_new_continue">Continue</string>
    <string name="whats_new_game_modes">Game Modes</string>
    <string name="whats_new_game_modes_description">The following preferences have been replaced with "Game Modes": Duration, board size, minimum word length, scoring type, and hint modes.\n\nYou can change game mode from the main screen, or create your own. High scores are based on game mode and lexicon.</string>
    <string name="whats_new_why">Why?</string>
    <string name="whats_new_game_modes_why">Thanks to contributions from the community, the ways you can play Lexica has expanded. This makes it harder to explain how high scores are recorded, and each new feature adds complexity.\n\nThis changes makes it easier to understand which combination of preferences result in a particular high score.\n\nAs an added bonus, the internals of Lexica have been updated to make it easier to enhance in the future by adding a local database to record every single word found and every high score.</string>
    <string name="menu_view_found_words">View found words</string>
    <plurals name="num_found_words_out_of_total">
        <item quantity="one">%d / %d word</item>
        <item quantity="other">%d / %d words</item>
    </plurals>
    <plurals name="max_score_points_suffix">
        <item quantity="one">/ %d point</item>
        <item quantity="other">/ %d points</item>
    </plurals>
    <plurals name="num_minutes">
        <item quantity="one">%d min</item>
        <item quantity="other">%d mins</item>
    </plurals>
    <string name="game_mode">Game Mode</string>
    <string name="help">Help</string>
    <string name="game_description">Lexica is a word game that is available on the Android platform. Players are given 3 to 30 minutes to find as many words as possible on a grid of random letters.</string>
    <string name="about_lexica">About Lexica</string>
    <string name="lexica_what_is_it">Lexica is a word game that is available on the Android platform. Players are given time to find as many words as possible on a grid of random letters.</string>
    <string name="help_how_to_play">How to play</string>
    <string name="help_how_to_play_desc">To play Lexica, start a new game by tapping \"New Game\" from the main menu. On the game screen, connect adjacent letters in the grid to form words, with connections possible horizontally, vertically, or diagonally. Each word must be at least three letters long and is automatically submitted upon formation, with points awarded based on the word\'s length and complexity. The game keeps track of your score and the number of words found, and your performance is summarized at the end of the game, showing both found and missed words along with their point values.</string>
    <string name="back">Back</string>
    <string name="new_game_mode">New Game Mode</string>
    <string name="min_word_length">Min Word Length</string>
</resources>
