<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/help"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:id="@+id/toolbar" />

    <LinearLayout
        android:id="@+id/help_list"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="16.0dip"
        android:clipChildren="false"
        android:clipToPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp" >

        <TextView
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:gravity="center_vertical"
            android:background="?selectableItemBackground"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8.0dip"
            android:layout_marginBottom="8.0dip"
            android:text="@string/about_lexica"
            android:drawableTint="?colorOnSurface"
            android:justificationMode="inter_word"/>
        <TextView
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:gravity="center_vertical"
            android:background="?selectableItemBackground"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8.0dip"
            android:layout_marginBottom="8.0dip"
            android:text="@string/lexica_what_is_it"
            android:justificationMode="inter_word"/>
        <TextView
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:gravity="center_vertical"
            android:background="?selectableItemBackground"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8.0dip"
            android:layout_marginBottom="8.0dip"
            android:text="@string/help_how_to_play"
            android:drawableTint="?colorOnSurface"
            android:justificationMode="inter_word"/>
        <TextView
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:gravity="center_vertical"
            android:background="?selectableItemBackground"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8.0dip"
            android:layout_marginBottom="8.0dip"
            android:text="@string/help_how_to_play_desc"
            android:drawableTint="?colorOnSurface"
            android:justificationMode="inter_word"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>